add redux to the project

--- a/package.json
+++ b/package.json
@@ -59,11 +59,20 @@
 		"commit": "yarn test && cz"
 	},
 	"dependencies": {
+		"@redux-devtools/extension": "^3.3.0",
+		"@reduxjs/toolkit": "^2.5.1",
 		"@ya.praktikum/react-developer-burger-ui-components": "^1.14.2",
+		"axios": "^1.7.9",
 		"clsx": "^2.1.0",
 		"core-js": "^3.38.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dnd": "^16.0.1",
+		"react-dnd-html5-backend": "^16.0.1",
+		"react-dom": "^18.2.0",
+		"react-redux": "^9.2.0",
+		"redux": "^5.0.1",
+		"redux-thunk": "^3.1.0",
+		"uuid": "^11.0.5"
 	},
 	"lint-staged": {
 		"*.{css,scss}": "yarn stylelint:fix",
