--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
 	"main": "index.js",
 	"license": "MIT",
 	"devDependencies": {
+		"@babel/core": "^7.26.10",
+		"@babel/preset-env": "^7.26.9",
+		"@babel/preset-react": "^7.26.3",
+		"@babel/preset-typescript": "^7.27.0",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
 		"@svgr/webpack": "^8.0.1",
+		"@testing-library/react": "^16.3.0",
+		"@types/jest": "^29.5.14",
 		"@types/react": "^18.2.0",
 		"@types/react-dom": "^18.2.1",
 		"@typescript-eslint/eslint-plugin": "^5.59.11",
 		"@typescript-eslint/parser": "^5.59.11",
 		"autoprefixer": "^10.4.14",
+		"babel-jest": "^29.7.0",
 		"clean-webpack-plugin": "^4.0.0",
 		"commitizen": "^4.3.0",
 		"cross-env": "^7.0.3",
@@ -27,12 +34,15 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"html-webpack-plugin": "^5.5.1",
 		"husky": "^8.0.3",
+		"jest": "^29.7.0",
 		"lint-staged": "^13.2.2",
 		"merge": "^2.1.1",
 		"mini-css-extract-plugin": "^2.7.6",
 		"postcss-loader": "^7.3.3",
 		"prettier": "^2.8.8",
 		"react-refresh": "^0.14.0",
+		"react-test-renderer": "^18.3.1",
+		"redux-mock-store": "^1.5.5",
 		"sass": "^1.69.7",
 		"sass-loader": "^13.3.3",
 		"style-loader": "^3.3.3",
@@ -40,7 +50,7 @@
 		"stylelint-config-standard": "^33.0.0",
 		"stylelint-order": "^6.0.3",
 		"ts-loader": "^9.4.3",
-		"typescript": "^5.0.4",
+		"typescript": "^5.8.2",
 		"typescript-plugin-css-modules": "^5.0.1",
 		"url-loader": "^4.1.1",
 		"webpack": "^5.81.0",
