--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
 		"sourceMap": true,
 		"allowJs": true /* Allow javascript files to be compiled. Useful when migrating JS to TS */,
 		// "checkJs": true /* Report errors in .js files. Works in tandem with allowJs. */,
-		"plugins": [{ "name": "typescript-plugin-css-modules" }]
+		"plugins": [{ "name": "typescript-plugin-css-modules" }],
+		"types": ["jest"],
 	},
 	"outDir": "./dist/",
 	"include": ["src/**/*"]
