chore: add settings for deployment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
 		"allowJs": true /* Allow javascript files to be compiled. Useful when migrating JS to TS */,
 		// "checkJs": true /* Report errors in .js files. Works in tandem with allowJs. */,
 		"plugins": [{ "name": "typescript-plugin-css-modules" }],
-		"types": ["jest"],
+		"types": ["jest", "node"],
 	},
 	"outDir": "./dist/",
 	"include": ["src/**/*"]
