--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@svgr/webpack": "^8.0.1",
 		"@testing-library/react": "^16.3.0",
 		"@types/jest": "^29.5.14",
+		"@types/node": "^22.14.1",
 		"@types/react": "^18.2.0",
 		"@types/react-dom": "^18.2.1",
 		"@typescript-eslint/eslint-plugin": "^5.59.11",
@@ -33,6 +34,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"gh-pages": "^6.3.0",
 		"html-webpack-plugin": "^5.5.1",
 		"husky": "^8.0.3",
 		"jest": "^29.7.0",
@@ -68,7 +70,9 @@
 		"test": "yarn stylelint:fix && yarn lint && yarn format",
 		"prepare": "husky install",
 		"commit": "yarn test && cz",
-		"cypress": "cypress open"
+		"cypress": "cypress open",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@redux-devtools/extension": "^3.3.0",
@@ -97,5 +101,5 @@
 			"path": "./node_modules/cz-conventional-changelog"
 		}
 	},
-	"homepage": "./"
+	"homepage": "./cosmo-burger/"
 }
